--- a/index.html
+++ b/index.html
@@ -3,11 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Blog Post</title>
+    <title>Ruatkima Documentation</title>
+    <style>
+        body {
+            background-color: #202123; /* ChatGPT dark background */
+            color: white;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* Top title */
+        header {
+            text-align: center;
+            font-size: 2em;
+            padding: 20px 0;
+            font-weight: bold;
+        }
+
+        /* Center content */
+        main {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* CMD-style text */
+        .cmd {
+            font-family: "Courier New", monospace;
+            font-size: 1.2em;
+            background-color: black;
+            color: #00ff00;
+            padding: 15px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-    <h1>My First Blog Post</h1>
-    <p>This is my first blog post. I can write about anything here!</p>
-    <p><a href="index.html">⬅ Back to Home</a></p>
+    <header>LOREM IPSUM</header>
+    <main>
+        <div class="cmd">Ruatkima Documentation</div>
+    </main>
 </body>
 </html>
