--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ruatkima Documentation</title>
+    <title>RK MAIN</title>
     <style>
         body {
-            background-color: #202123; /* ChatGPT dark background */
+            background-color: #202123;
             color: white;
             font-family: Arial, sans-serif;
             margin: 0;
@@ -18,8 +18,8 @@
         /* Top title */
         header {
             text-align: center;
-            font-size: 2em;
-            padding: 20px 0;
+            font-size: 7em;
+            padding: 50px 0;
             font-weight: bold;
         }
 
@@ -30,13 +30,11 @@
             justify-content: center;
             align-items: center;
         }
-
-        /* CMD-style text */
         .cmd {
             font-family: "Courier New", monospace;
             font-size: 1.2em;
             background-color: black;
-            color: #00ff00;
+            color: #FFFFFF;
             padding: 15px;
             border-radius: 5px;
         }
