--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RK MAIN</title>
+    <title>Ruatkima</title>
     <style>
         body {
             background-color: #202123;
@@ -18,8 +18,8 @@
         /* Top title */
         header {
             text-align: center;
-            font-size: 7em;
-            padding: 50px 0;
+            font-size: 5em;
+            padding: 35px 0;
             font-weight: bold;
         }
 
@@ -41,9 +41,12 @@
     </style>
 </head>
 <body>
-    <header>LOREM IPSUM</header>
+    <header>Lorem Ipsum</header>
     <main>
         <div class="cmd">Ruatkima Documentation</div>
+        <div class="cmd">test1</div>
+        <div class="cmd">test2</div>
+        <div class="cmd">test3</div>
     </main>
 </body>
 </html>
