--- a/index.html
+++ b/index.html
@@ -23,59 +23,58 @@
             font-weight: bold;
         }
 
-        /* Two-column section */
-        .container {
+        /* Divider and content */
+        .divider-container {
             flex: 1;
             display: flex;
             justify-content: center;
-            align-items: flex-start;
-            gap: 50px;
-            padding-top: 20px;
+            align-items: stretch;
+            padding: 20px;
+            gap: 10px;
+            overflow-x: auto; /* Allow horizontal scroll on small screens */
         }
 
-        /* Divider */
-        .divider {
-            width: 2px;
-            background-color: #555;
-        }
-
-        /* CMD box style */
         .cmd-box {
+            flex: 1;
+            min-width: 250px; /* Prevent shrinking too small */
+            font-family: "Courier New", monospace;
+            font-size: 1.2em;
             background-color: black;
             color: #FFFFFF;
             padding: 15px;
             border-radius: 5px;
-            font-family: "Courier New", monospace;
-            font-size: 1.2em;
-            min-width: 250px;
+            box-sizing: border-box;
         }
 
         .cmd-box h2 {
             margin-top: 0;
-            font-size: 1.5em;
-            text-align: center;
+            border-bottom: 1px solid #FFFFFF;
+            padding-bottom: 5px;
+        }
+
+        /* Stack vertically on small screens */
+        @media (max-width: 600px) {
+            .divider-container {
+                flex-direction: column;
+                overflow-x: hidden;
+            }
         }
     </style>
 </head>
 <body>
     <header>Lorem Ipsum</header>
-
-    <div class="container">
-        <!-- Left CMD box -->
+    <div class="divider-container">
         <div class="cmd-box">
             <h2>Utility</h2>
-            <p>Command 1</p>
-            <p>Command 2</p>
+            <p>Test 1</p>
+            <p>Test 2</p>
+            <p>Test 3</p>
         </div>
-
-        <!-- Divider -->
-        <div class="divider"></div>
-
-        <!-- Right CMD box -->
         <div class="cmd-box">
             <h2>Game Related</h2>
-            <p>Command A</p>
-            <p>Command B</p>
+            <p>Game 1</p>
+            <p>Game 2</p>
+            <p>Game 3</p>
         </div>
     </div>
 </body>
