--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="divider-container">
         <div class="cmd-box">
             <h2>Utility/Tool</h2>
-            <p><a href="https://google.com">1</a> Test 1</p>
+            <p>Test <a href="https://google.com">1</a></p>
             <p><a href="https://youtube.com">2</a> Test 2</p>
             <p><a href="https://rrkima.github.io">3</a> Test 3</p>
         </div>
