--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
     <div class="divider-container">
         <div class="cmd-box">
             <h2>Utility/Tool</h2>
-            <p>Test <a href="https://google.com">1</a></p>
-            <p><a href="https://youtube.com">2</a> Test 2</p>
-            <p><a href="https://rrkima.github.io">3</a> Test 3</p>
+            <p> Test <a href="https://google.com">1</a></p>
+            <p> Test <a href="https://youtube.com">2</a></p>
+            <p> Test <a href="https://rrkima.github.io">3</a></p>
         </div>
         <div class="cmd-box">
             <h2>Game Related</h2>
-            <p><a href="https://steamrip.com">link</a> Direct download site link</p>
-            <p><a href="https://fitgirl-repacks.site">link</a> Torrent site link</p>
-            <p><a href="https://archive.org">3</a> Old game link</p>
+            <p> Direct download site <a href="https://steamrip.com">link</a></p>
+            <p> Torrent site <a href="https://fitgirl-repacks.site">link</a></p>
+            <p> Old game <a href="https://archive.org">3</a></p>
         </div>
     </div>
 </body>
