--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ruatkima</title>
     <style>
         body {
-            background-color: #202123;
+            background-color: #4B7A7A;
             color: white;
             font-family: Arial, sans-serif;
             margin: 0;
@@ -73,15 +73,15 @@
     <div class="divider-container">
         <div class="cmd-box">
             <h2>Utility/Tool</h2>
-            <p> Test <a href="https://google.com">1</a></p>
-            <p> Test <a href="https://youtube.com">2</a></p>
-            <p> Test <a href="https://rrkima.github.io">3</a></p>
+            <p> Download Manager <a href="https://www.freedownloadmanager.org/">link</a></p>
+            <p> Torrent App <a href="https://www.qbittorrent.org/">2</a></p>
+            <p> Anti-Malware <a href="https://www.malwarebytes.com/mwb-download">3</a></p>
         </div>
         <div class="cmd-box">
             <h2>Game Related</h2>
             <p> Direct download site <a href="https://steamrip.com">link</a></p>
             <p> Torrent site <a href="https://fitgirl-repacks.site">link</a></p>
-            <p> Old game <a href="https://archive.org">3</a></p>
+            <p> Old game site <a href="https://archive.org">link</a></p>
         </div>
     </div>
 </body>
