--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ruatkima</title>
     <style>
         body {
-            background-color: #4B7A7A;
+            background-color: #531C6B;
             color: white;
             font-family: Arial, sans-serif;
             margin: 0;
