--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ruatkima</title>
     <style>
         body {
-            background-color: #531C6B;
+            background-color: #433B47;
             color: white;
             font-family: Arial, sans-serif;
             margin: 0;
@@ -73,15 +73,18 @@
     <div class="divider-container">
         <div class="cmd-box">
             <h2>Utility/Tool</h2>
-            <p> Download Manager <a href="https://www.freedownloadmanager.org/">link</a></p>
-            <p> Torrent App <a href="https://www.qbittorrent.org/">2</a></p>
-            <p> Anti-Malware <a href="https://www.malwarebytes.com/mwb-download">3</a></p>
+            <p> Download manager <a href="https://www.freedownloadmanager.org/">link</a></p>
+            <p> Torrent app <a href="https://www.qbittorrent.org/">link</a></p>
+            <p> Anti-malware <a href="https://www.malwarebytes.com/mwb-download">link</a></p>
+            <p> Ad-blocker extension <a href="https://ublockorigin.com/">link</a></p>
+            <p> VPN(For Expert level) <a href="https://softether.org">link</a></p>
         </div>
         <div class="cmd-box">
             <h2>Game Related</h2>
             <p> Direct download site <a href="https://steamrip.com">link</a></p>
             <p> Torrent site <a href="https://fitgirl-repacks.site">link</a></p>
             <p> Old game site <a href="https://archive.org">link</a></p>
+            <p> DNS for Optimize ping <a href="https://one.one.one.one/">link</a></p>
         </div>
     </div>
 </body>
