--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <p> Torrent app <a href="https://www.qbittorrent.org/">link</a></p>
             <p> Anti-malware <a href="https://www.malwarebytes.com/mwb-download">link</a></p>
             <p> Ad-blocker extension <a href="https://ublockorigin.com/">link</a></p>
-            <p> VPN(For Expert level) <a href="https://softether.org">link</a></p>
+            <p> VPN(For Expert level) <a href="https://www.softether.org/">link</a></p>
         </div>
         <div class="cmd-box">
             <h2>Game Related</h2>
